chpoker no longer covers the button.

--- a/style.css
+++ b/style.css
@@ -37,6 +37,6 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-35px);
+    transform: translateY(35px);
   }
 }
